--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   color: white;
   border: none;
   border-radius: 5px;
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
 
 .edit-button {
@@ -14,18 +16,25 @@
 }
 
 table {
-  border: 1px solid chartreuse;
+  border: 1px solid black;
+  border-collapse: collapse;
+  width: 75%;
 }
 
 th {
   font-weight: bold;
+  border: 1px solid black;
 }
 
 tr:nth-child(odd) {
-  background-color: #f5f5f5;
+  background-color: lightgrey;
   color: black;
 }
 
 tr:nth-child(even) {
   background-color: white;
+}
+
+td {
+  border: 1px solid black;
 }
