--- a/layout.css
+++ b/layout.css
@@ -16,6 +16,10 @@
   justify-content: center;
 }
 
+.justify-space-evenly {
+  justify-content: space-evenly;
+}
+
 .padding-5 {
   padding: 5px;
 }
