worked on show/hide modal functionality

--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,9 @@ td {
   height: 35px;
 }
 
-dialog {
+/* dialog {
   display: block;
-}
-
-label {
-  margin-top: 10px;
-}
+} */
 
 .cancel-button {
   margin-top: 10px;
